admission/ValidatingAdmissionPolicy/policies/privilege-escalation/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privilege-escalation-ephemeralcontainers
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test privilege-escalation-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/privilege-escalation/ephemeralcontainers/deny-kubectl-debug-custom.yaml
